--- a/.tas.yml
+++ b/.tas.yml
@@ -1,12 +1,39 @@
----
-preRun:
-  # SECONDLY - You need to set the preRun commands. These are shell commands executed inside the root level of your git repository before running the tests. preRun commands are executed using non-login shells by default, so you must explicitly source any dotfiles as part of the command.
-  command:
-    - yarn install
+postMerge :
+  preRun: 
+    command:
+      - npm install
+  subModules:
+        
+      - name: react-base16-styling     
+        path : "./packages/react-base16-styling"
+        pattern: 
+          - "./test/index.test.ts"
+        framework : jest
+        preRun:
+          command:
+            - npm run build
+        postRun:
+            command:
+              - node --version 
+        configFile : "./jest.config.js"
+      
+preMerge : 
+  
+  subModules:
+     
+    - name: react-base16-styling     
+      path : "./packages/react-base16-styling"
+      pattern: 
+        - "./test/index.test.ts"
+      framework : jest
+      preRun:
+        command:
+          - npm run build
+      postRun:
+          command:
+            - node --version 
+      configFile : "./jest.config.js"
 
-postMerge:
-  # THIRDLY - You need to set postMerge patterns.
-  # These would be the glob patterns for the test cases that you want to execute in the post-merge jobs. A postMerge test execution job is initiated whenever a PR is merged into a branch.
-  pattern:
-    # glob-patterns to discover tests to run in case of postMerge
-    - "**/*spec.js""
+version : 2.0.0
+nodeVersion : 17.3.1
+tier: medium
