--- a/.tas.yml
+++ b/.tas.yml
@@ -1,7 +1,7 @@
 postMerge :
   preRun: 
     command:
-      - npm install
+      - pnpm install
   
   subModules:          #Not to be changed
       
@@ -13,11 +13,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm run build
-          
-        postRun:
-            command:
-              - node --version 
+            - pnpm build:all
         configFile : "./jest.config.js"
         
       - name: redux-devtools-cli     
@@ -28,11 +24,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm run build
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm build:all
         configFile : "./jest.config.js"
         
       - name: map2tree     
@@ -43,11 +35,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm run build
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm build:all
         configFile : "./jest.config.js"
         
       - name: react-dock     
@@ -58,12 +46,8 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i 
-            - npm run build
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
+            - pnpm build:all
         configFile : "./jest.config.js"
         
       - name: react-json-tree     
@@ -75,11 +59,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"
       
       - name: redux-devtools-app     ## blocked  
@@ -90,11 +70,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"  
       
         
@@ -107,11 +83,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"
         
       - name: redux-devtools-inspector-monitor-trace-tab    
@@ -122,11 +94,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"
         
       
@@ -138,11 +106,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"
         
       
@@ -155,11 +119,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"
         
         
@@ -172,11 +132,7 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
         configFile : "./jest.config.js"  
         
       
@@ -189,12 +145,8 @@ postMerge :
         framework : jest
         preRun:
           command:
-            - npm i
-            - npm run build
-
-        postRun:
-            command:
-              - node --version 
+            - pnpm install
+            - pnpm build:all
         configFile : "./jest.config.js"   
       
  
@@ -212,7 +164,7 @@ preMerge :
       framework : jest
       preRun:
         command:
-          - npm run build
+          - pnpm build:all
 
       postRun:
           command:
@@ -227,7 +179,7 @@ preMerge :
       framework : jest
       preRun:
         command:
-          - npm run build
+          - pnpm build:all
 
       postRun:
           command:
@@ -242,7 +194,7 @@ preMerge :
       framework : jest
       preRun:
         command:
-          - npm run build
+          - pnpm build:all
 
       postRun:
           command:
